# dentsu-dmi-01-public

./: .gitignore  README.md  lightning_observation.csv  lightningdata.ipynb  setup.cfg  setup.py
dmi/: cli.py  observation.py  utils.py
