[metadata]
name = dmi
version = 0.0.1
description = Command line interface for DMI API (exclusively a test-ground for Python candidates)
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/Dentsudatalab/DMI-metObs-etl
author = Dentsu Denmark
license = All Rights Reserved

[options]
python_requires = >=3.8
packages = find:
install_requires =
    click>=8.0.1,<9
    pandas>=1.3.4,<2
    requests>=2.25.1,<3

[options.entry_points]
console_scripts =
    dmi = dmi.cli:dmi
